# rjain557-knowledge

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  workstation.md
.claude/: mcp.json  settings.json
.claude/commands/: consolidate.md  contradictions.md  graduate.md  impact.md  review.md  sync.md  vault-status.md  volatility.md
.claude/hooks/: _lib.ps1  consolidate.ps1  health-check.ps1  impact-check.ps1  preference-extract.ps1  reindex.ps1  retrieve.ps1
config/: models.yaml  refresh-topics.yaml  reviewed-repos.yaml  settings.yaml  target-domains.yaml  tracked-feeds.yaml
docs/: CORTEX_BRAIN_PROMPT.md  CROSS_REPO_BRAIN_ACCESS.md  SPEC.md  SYSTEM.md
knowledge/: 01-add-a-persistent-codebase-index-claudemd-knowledge-graph-to-eliminate-.md  01-add-a-persistent-knowledge-graph-index-alongside-the-vector-store-to-e.md  01-add-a-persistent-knowledge-graph-index-layer-on-top-of-the-flat-markdo.md  01-add-a-persistent-knowledge-graph-index-over-the-vault-to-eliminate-per.md  01-add-a-persistent-knowledge-graph-index-to-eliminate-cold-start-orienta.md  01-add-a-persistent-knowledge-graph-index-to-eliminate-per-run-context-re.md  01-add-a-persistent-knowledge-graph-index-to-eliminate-per-session-re-ori.md  01-add-langfuse-tracing-to-all-llm-calls-in-the-pipeline.md  01-add-langfuse-tracing-to-deep-research-and-extraction-pipeline-runs.md  01-add-langfuse-tracing-to-the-extraction-and-synthesis-pipeline.md  01-add-llm-compiled-wiki-synthesis-layer-karpathy-pattern-for-cross-note-.md  01-add-llm-observability-tracing-to-all-claude-api-calls-via-langfuse.md  01-add-llm-observability-tracing-to-extraction-and-deep-research-pipeline.md  01-add-llm-observability-tracing-to-the-deep-research-and-extraction-pipe.md  01-add-llm-observability-tracing-to-the-deep-research-and-synthesis-pipel.md  01-add-llm-observability-tracing-via-langfuse-to-all-agent-pipeline-calls.md  02-build-a-persistent-knowledge-graph-index-over-the-vault-to-replace-lin.md  02-implement-idempotent-resumable-deep-research-runs-with-a-status-state-.md  02-implement-idempotent-retry-with-exponential-back-off-for-all-claude-ap.md  02-instrument-llm-calls-with-langfuse-tracing-to-make-the-daily-review-lo.md  02-pre-compute-a-persistent-knowledge-graph-index-to-eliminate-per-sessio.md  02-pre-compute-a-persistent-repo-knowledge-graph-to-eliminate-per-session.md  02-pre-index-the-knowledge-vault-into-a-persistent-knowledge-graph-graphi.md  02-replace-ad-hoc-claude-api-calls-with-a-structured-retry-cost-tracking-.md  02-replace-ad-hoc-model-string-literals-with-the-new-multi-provider-route.md  02-replace-ad-hoc-per-extractor-error-handling-with-a-unified-dead-letter.md  02-replace-fire-and-forget-agent-commits-with-idempotent-run-state-checkp.md  02-replace-per-run-context-re-discovery-with-a-pre-built-repo-knowledge-g.md  02-replace-per-run-full-vault-context-loading-with-a-pre-assembled-contex.md  02-replace-per-run-vault-re-scan-with-a-persistent-knowledge-graph-index.md  02-replace-per-session-codebase-re-reads-with-a-pre-computed-repo-knowled.md  02-replace-stateless-per-run-context-assembly-with-a-compiled-agent-contr.md  02-replace-stateless-per-run-context-assembly-with-a-pre-compiled-agent-c.md  02-replace-stateless-per-run-context-assembly-with-a-structured-agent-mem.md  03-enforce-structured-output-contracts-on-all-llm-calls-using-pydantic-mo.md  03-implement-a-self-healing-vault-lint-that-auto-fixes-broken-wiki-cross-.md  03-implement-a-structured-crrs-prompt-template-for-all-claude-agent-calls.md  03-implement-active-cross-note-linking-in-the-vault-writer-to-replace-pas.md  03-implement-claude-code-hooks-for-lifecycle-aware-vault-writes-pre-write.md  03-implement-idempotent-deduplication-for-vault-writes-to-prevent-duplica.md  (+43 more)
scripts/: build_cortex_spec.py  cleanup_signatures.py  deep_research.py  expand_topics.py  ingest_once.py  lint_wiki.py  model_refresh.py  poll.py  poll_hourly.ps1  reextract.py  refresh_topics.py  review_repos.py  scan_github.py  setup_n8n_workflow.py  webhook_server.py
sql/init/: 00_create_database.sql
sql/migrations/: 0001_initial.sql  0002_vector_index.sql  (+6 more)
workstation_assets/: vault-pre-commit
(+45 files in other folders)
