[project]
name = "cortex"
version = "0.1.0"
description = "Inbox Brain — self-improving knowledge system across three AI domains"
requires-python = ">=3.11"
dependencies = [
    # ── Core ──────────────────────────────────────────────────────────────
    "anthropic>=0.49.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "structlog>=24.1",

    # ── M365 / Microsoft Graph ────────────────────────────────────────────
    "msal>=1.31",
    "msgraph-sdk>=1.5",

    # ── SQL Server ────────────────────────────────────────────────────────
    "pyodbc>=5.1",

    # ── Article extraction (Phase 1) ──────────────────────────────────────
    "trafilatura>=1.12",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "playwright>=1.44",

    # ── Vault ─────────────────────────────────────────────────────────────
    "python-frontmatter>=1.1",
    "slugify>=0.0.1",

    # ── Feeds ─────────────────────────────────────────────────────────────
    "feedparser>=6.0",
    "httpx>=0.27",

    # ── Scheduling ────────────────────────────────────────────────────────
    "apscheduler>=3.10",

    # ── MCP server ────────────────────────────────────────────────────────
    "fastmcp>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
phase2 = [
    # YouTube / video
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.5",
    # GitHub
    "PyGithub>=2.3",
    # PDF
    "pdfplumber>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
